# ChangeLog for dev-libs/cgilib
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cgilib/ChangeLog,v 1.11 2005/06/26 01:24:03 vanquirius Exp $

*cgilib-0.5-r1 (26 Jun 2005)

  26 Jun 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/cgilib-0.5-cgitest.diff, +cgilib-0.5-r1.ebuild:
  Add patch from CVS, compile and install cgilib.test to make testing easier.

  12 Jun 2005; Bryan Østergaard <kloeri@gentoo.org> cgilib-0.5.ebuild:
  Stable on alpha.

  10 Jun 2005; Gustavo Zacarias <gustavoz@gentoo.org> cgilib-0.5.ebuild:
  Stable on sparc

  05 Jun 2005; Rene Nussbaumer <killerfox@gentoo.org> cgilib-0.5.ebuild:
  Stable on hppa.

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org> cgilib-0.5.ebuild:
  Stable on ppc.

  03 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> cgilib-0.5.ebuild:
  Marked x86 stable. Fixes bug 94960. Thanks to Daniel Webert <rockoo@gmail.com>.

  24 Apr 2005; Bryan Østergaard <kloeri@gentoo.org> cgilib-0.5.ebuild:
  ~alpha keyword, bug 88697.

  21 Apr 2005; Jason Wever <weeve@gentoo.org> cgilib-0.5.ebuild:
  Added ~sparc keyword wrt bug #88697.

  14 Apr 2005; Joseph Jezak <josejx@gentoo.org> cgilib-0.5.ebuild:
  Marked ~ppc for bug #88697.

  13 Apr 2005; Aaron Walker <ka0ttic@gentoo.org> cgilib-0.5.ebuild:
  sed CFLAGS in Makefile instead of completely overriding them so that -I. is
  included.

*cgilib-0.5 (12 Apr 2005)

  12 Apr 2005; Aaron Walker <ka0ttic@gentoo.org> +metadata.xml,
  +cgilib-0.5.ebuild:
  Initial commit (dependency of latest rrdtool release). Thanks to Frederic
  Mangeant in bug 88697 for the ebuild.
