@@ -1,6 +1,6 @@
-MD5 10e6e3485497d3c202833a604f277ec8 cgilib-0.5-r1.ebuild 920
+MD5 330dcee64428376f3a268dfba66f674b cgilib-0.5-r1.ebuild 986
 MD5 47008a297eae1c39e7b14efddc08624a cgilib-0.5.ebuild 754
-MD5 ffce915afa86c061451802414888261c ChangeLog 1641
+MD5 5151abd9f6b0ef6a5ddff11a9ba9f121 ChangeLog 1795
 MD5 637389da071d8ee0c0292695525bc29f metadata.xml 160
 MD5 81af59a7b4da26191ad1d4ca2f68137c files/cgilib-0.5-cgitest.diff 792
 MD5 7b0e4e09c6696f543a80f54e6d9de1f8 files/digest-cgilib-0.5 61
