@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/cgilib
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cgilib/ChangeLog,v 1.11 2005/06/26 01:24:03 vanquirius Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cgilib/ChangeLog,v 1.12 2005/06/26 01:48:44 vanquirius Exp $
+
+  26 Jun 2005; Marcelo Goes <vanquirius@gentoo.org> cgilib-0.5-r1.ebuild:
+  Test is possibly broken on other arches, so I am making it x86-only for now.
 
 *cgilib-0.5-r1 (26 Jun 2005)
 
